added note about PDF knit

--- a/Part_4/Rtutorial_spring24_pt4.Rmd
+++ b/Part_4/Rtutorial_spring24_pt4.Rmd
@@ -14,6 +14,13 @@ output:
 
 # **R Tutorial: Part 4**
 
+```{r eval=FALSE, include=FALSE}
+
+# Need to install the following (for Mac) if knitting to PDF
+tinytex::install_tinytex()
+
+```
+
 ```{r, echo=FALSE}
 
 # R stats meme
